config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strompris
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: strompris
  template:
    metadata:
      labels:
        app: strompris
    spec:
      containers:
      - name: strompris
        image: runarh/strompris:v1.0.0
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8083
        livenessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: Custom-Header
              value: Awesome
