config/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: strompris
    name: strompris
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: strompris
  type: ClusterIP
