config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-strompris
spec:
  ingressClassName: "nginx"
  rules:
    - host: web04.go4clouds.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strompris
                port:
                  number: 8083
